Java compilation fixed